新增內容後切回全部分類

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
     <div class="card card_list">
       <ul class="tab">
-        <li data-class="全部" class="active">全部</li>
-        <li data-class="待完成">待完成</li>
-        <li data-class="已完成">已完成</li>
+        <li data-status="全部" class="active">全部</li>
+        <li data-status="待完成">待完成</li>
+        <li data-status="已完成">已完成</li>
       </ul>
       <div class="cart_content">
         <ul class="list">
